correct servicesn z-index

--- a/css/style.css
+++ b/css/style.css
@@ -196,7 +196,6 @@ a.menu_link:hover {
 .page_services {
   margin: -111px 0 0 0;
   position: relative;
-  z-index: 2;
 }
 .page_advantages {
 
